maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:37: error: overloaded method value min with alternatives:
  (x$1: Double,x$2: Double)Double <and>
  (x$1: Float,x$2: Float)Float <and>
  (x$1: Long,x$2: Long)Long <and>
  (x$1: Int,x$2: Int)Int
 cannot be applied to (Int, Int, Int, Int)
    if (nord == Math.min(nord,sud,est,ouest)){
                     ^JediEscaper:38: error: value Nord is not a member of object plm.universe.Direction
      setDirection(Direction.Nord)
                             ^JediEscaper:40: error: overloaded method value min with alternatives:
  (x$1: Double,x$2: Double)Double <and>
  (x$1: Float,x$2: Float)Float <and>
  (x$1: Long,x$2: Long)Long <and>
  (x$1: Int,x$2: Int)Int
 cannot be applied to (Int, Int, Int)
    }else if (sud == Math.min(sud,est,ouest)){
                          ^JediEscaper:41: error: value Sud is not a member of object plm.universe.Direction
      setDirection(Direction.Sud)
                             ^JediEscaper:44: error: value Est is not a member of object plm.universe.Direction
      setDirection(Direction.Est)
                             ^JediEscaper:47: error: value Ouest is not a member of object plm.universe.Direction
      setDirection(Direction.Ouest)
                             ^